remove border, fix button vertical align, use some vscode colors

--- a/src/webview/style.css
+++ b/src/webview/style.css
@@ -1,20 +1,13 @@
+html {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   overscroll-behavior: none;
   margin: 0px;
   padding: 0px;
-}
-
-body.vscode-light {
-  color: #585858;
-}
-
-body.vscode-dark {
-  color: #a7a7a7;
-}
-
-html {
-  margin: 0px;
-  padding: 0px;
+  color: --vscode-foreground;
 }
 
 /* rolling groove */
@@ -81,7 +74,6 @@ select {
   left: 50%;
   transform: translateX(-50%);
   position: relative;
-  width: 99vw;
 }
 
 .title h1 {
@@ -101,31 +93,26 @@ select {
 }
 
 .svg-container {
-  /* float: left; */
-  height: calc(99vh - 44px);
-  /* width: 70%; */
+  height: calc(100vh - 38px);
 }
 
 #svg {
-  border: 1.5px solid #6190e8;
   cursor: crosshair;
   padding: 0px;
   touch-action: none;
   background-size: 20px 20px;
   background-image:
-    linear-gradient(to right, grey 1px, transparent 1px),
-    linear-gradient(to bottom, grey 1px, transparent 1px);
+    linear-gradient(to right, var(--vscode-panel-border) 1px, transparent 1px),
+    linear-gradient(to bottom, var(--vscode-panel-border) 1px, transparent 1px);
   width: 100%;
   height: 100%;
 }
 
 .svg-button {
-  border: 1.5px solid #6190e8;
-  /* border-left: none; */
-  /* float: left; */
   height: 35px;
-  /* width: 30%; */
-  padding: 6px 16px;
+  display: flex;
+  align-items: center;
+  padding: 0px 16px;
   box-sizing: border-box;
   user-select: none;
   overflow-y: auto;
